--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "Hassan K. Alkhalidi",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^19.0.3"
+    "electron": "^19.0.3",
     "electron-builder": "^23.0.3"
   }
 }
